refactor entity classes to use Lombok annotations for getter, setter, equals, and toString methods